// GraphRAG query and result types for proto-canonical operations.
// This file provides types for the QueryNodes and StoreNode RPCs.

syntax = "proto3";
package gibson.graphrag;
option go_package = "github.com/zero-day-ai/sdk/api/gen/graphragpb";

// GraphQuery represents a query against the knowledge graph using proto-canonical types.
message GraphQuery {
  string text = 1;
  repeated float embedding = 2;
  int32 top_k = 3;
  repeated string node_types = 4;
  double min_score = 5;
  double max_score = 6;
  string mission_id = 7;
  string mission_run_id = 8;
  QueryScope scope = 9;
  map<string, string> filters = 10;
  double vector_weight = 11;
  double graph_weight = 12;
}

// QueryScope defines the scope of a graph query.
enum QueryScope {
  QUERY_SCOPE_UNSPECIFIED = 0;
  QUERY_SCOPE_MISSION = 1;
  QUERY_SCOPE_MISSION_RUN = 2;
  QUERY_SCOPE_GLOBAL = 3;
}

// QueryResult represents a single result from a graph query.
message QueryResult {
  GraphNode node = 1;
  double score = 2;
  double vector_score = 3;
  double graph_score = 4;
  repeated string path = 5;
  int32 distance = 6;
}

// GraphNode represents a node in the knowledge graph.
// This is the proto-canonical representation for storage and query operations.
message GraphNode {
  string id = 1;
  string type = 2;  // Node type (e.g., "host", "port", "finding")
  map<string, Value> properties = 3;

  // Content for semantic search (optional)
  string content = 4;

  // Scoping fields (injected by harness)
  string mission_id = 10;
  string mission_run_id = 11;
  string agent_run_id = 12;
  string discovered_by = 13;
  int64 discovered_at = 14;

  // Timestamps
  int64 created_at = 20;
  int64 updated_at = 21;

  // Parent reference
  optional string parent_id = 30;
  optional string parent_type = 31;
  optional string parent_relationship = 32;
}

// Value represents a dynamic property value.
message Value {
  oneof kind {
    string string_value = 1;
    int64 int_value = 2;
    double double_value = 3;
    bool bool_value = 4;
    bytes bytes_value = 5;
    int64 timestamp_value = 6;
    ListValue list_value = 7;
    MapValue map_value = 8;
  }
}

message ListValue {
  repeated Value values = 1;
}

message MapValue {
  map<string, Value> fields = 1;
}

// Relationship represents a connection between two nodes.
message Relationship {
  string id = 1;
  string from_id = 2;
  string to_id = 3;
  string type = 4;
  map<string, Value> properties = 5;
  double weight = 6;

  // Scoping
  string mission_id = 10;
  string mission_run_id = 11;

  // Timestamps
  int64 created_at = 20;
}

// ==================== DISCOVERY RESULT ====================

// DiscoveryResult is a standardized container for tool-discovered entities.
// Tools populate this message and Gibson automatically persists to the graph.
message DiscoveryResult {
  // Asset discoveries
  repeated Host hosts = 1;
  repeated Port ports = 2;
  repeated Service services = 3;
  repeated Endpoint endpoints = 4;
  repeated Domain domains = 5;
  repeated Subdomain subdomains = 6;
  repeated Technology technologies = 7;
  repeated Certificate certificates = 8;

  // Security findings
  repeated Finding findings = 9;
  repeated Evidence evidence = 10;

  // Custom extensions
  repeated CustomNode custom_nodes = 20;
  repeated ExplicitRelationship explicit_relationships = 21;
}

// Host discovered by a tool.
message Host {
  string ip = 1;
  optional string hostname = 2;
  optional string state = 3;
  optional string os = 4;
  optional string os_version = 5;
  optional string mac_address = 6;
}

// Port discovered on a host.
message Port {
  string host_id = 1;  // Links to parent host (ip or hostname)
  int32 number = 2;
  string protocol = 3;
  optional string state = 4;
  optional string reason = 5;
}

// Service running on a port.
message Service {
  string port_id = 1;  // Composite: host_id:number:protocol
  string name = 2;
  optional string product = 3;
  optional string version = 4;
  optional string extra_info = 5;
  optional string banner = 6;
  optional string cpe = 7;
}

// Endpoint (URL) on a service.
message Endpoint {
  string service_id = 1;
  string url = 2;
  optional string method = 3;
  optional int32 status_code = 4;
  optional string content_type = 5;
  optional int64 content_length = 6;
  optional string title = 7;
}

// Domain discovered.
message Domain {
  string name = 1;
  optional string registrar = 2;
  optional int64 created_date = 3;
  optional int64 expiry_date = 4;
}

// Subdomain under a domain.
message Subdomain {
  string parent_domain = 1;
  string name = 2;
  optional string full_name = 3;
}

// Technology detected.
message Technology {
  string name = 1;
  optional string version = 2;
  optional string category = 3;
  optional int32 confidence = 4;
  optional string cpe = 5;
}

// Certificate discovered.
message Certificate {
  optional string subject = 1;
  optional string issuer = 2;
  optional string serial_number = 3;
  optional int64 not_before = 4;
  optional int64 not_after = 5;
  optional string fingerprint_sha256 = 6;
  optional string san = 7;
}

// Finding (vulnerability or security issue).
message Finding {
  string title = 1;
  optional string description = 2;
  string severity = 3;
  optional double confidence = 4;
  optional string category = 5;
  optional string remediation = 6;
  optional double cvss_score = 7;
  optional string cve_ids = 8;
}

// Evidence for a finding.
message Evidence {
  string finding_id = 1;
  string type = 2;
  optional string content = 3;
  optional string url = 4;
}

// CustomNode for entities not in standard taxonomy.
message CustomNode {
  string node_type = 1;
  map<string, string> id_properties = 2;
  map<string, string> properties = 3;
  optional string parent_type = 4;
  map<string, string> parent_id = 5;
  optional string relationship_type = 6;
}

// ExplicitRelationship for custom connections.
message ExplicitRelationship {
  string from_type = 1;
  map<string, string> from_id = 2;
  string to_type = 3;
  map<string, string> to_id = 4;
  string relationship_type = 5;
  map<string, string> properties = 6;
}
